--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@ function myFunction() {
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
             <a href="https://github.com/litatyana1/intro-to-programming" class="fa fa-github" target="_blank"></a>
             <a href="https://www.linkedin.com/in/tatyana-li-1349bb34" class="fa fa-linkedin" target="_blank"></a>
-            <a href="https://www.facebook.com/tanya.lee.73345" class="fa fa-facebook" target="_blank"></a>
+            <a href="https://www.facebook.com/tanya.lee.73345" class="fa-xl fa fa-facebook" target="_blank"></a>
+            <!-- <a href="https://www.facebook.com/tanya.lee.73345" target="_blank">
+            <img  src="img\icons8_facebook.png" class="icon">
+            </a> -->
     </div>
     </section>
     </section>
