Made updates per mentor's comments

--- a/index.html
+++ b/index.html
@@ -28,34 +28,37 @@
           <li class="nav-item">
             <a href="#connect" class="nav-link">Connect</a>
           </li>
+          <li class="nav-item">
+            <a href="#leave_message" class="nav-link">Message</a>
+          </li>
         </ul>
         <div class="hamburger">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
         </div>
-        <!-- <button onclick="myFunction()">Toggle dark mode</button> -->
+        <!-- <button onclick="myFunction()">Dark mode</button> -->
       </nav>
     </header>
- 
-<script>
-function myFunction() {
-   var element = document.body;
-   element.classList.toggle("dark-mode");
-}
-</script>
+
+    <!-- <script>
+      function myFunction() {
+        var element = document.body;
+        element.classList.toggle("dark-mode");
+      }
+    </script> -->
 
     <section id="about">
-      <h1>About</h1>
+      <h2>About</h2>
       <img
         class="circular--square"
         src="img/tatyana.jpg"
         alt="Tatyana's image"
-        style="width: 128px; height: 110px"
       />
       <p>
-        Highly motivated individual with a strong sence of accountability.
-       Able to prioritize, set and meet goals and objectives while being reliable and honest. Skilled in Teamwork and Customer service.
+        Highly motivated individual with a strong sence of accountability. Able
+        to prioritize, set and meet goals and objectives while being reliable
+        and honest. Skilled in Teamwork and Customer service.
       </p>
     </section>
 
@@ -83,17 +86,18 @@ function myFunction() {
     <section id="connect">
       <h2>Connect</h2>
       <div class="social">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-            <a href="https://github.com/litatyana1/intro-to-programming" class="fa fa-github" target="_blank"></a>
-            <a href="https://www.linkedin.com/in/tatyana-li-1349bb34" class="fa fa-linkedin" target="_blank"></a>
-            <a href="https://www.facebook.com/tanya.lee.73345" class="fa-xl fa fa-facebook" target="_blank"></a>
-            <!-- <a href="https://www.facebook.com/tanya.lee.73345" target="_blank">
-            <img  src="img\icons8_facebook.png" class="icon">
-            </a> -->
-    </div>
+        <a href="https://github.com/litatyana1/intro-to-programming" target="_blank">
+          <img src="img/github1.png" class="icon" />
+        </a>
+        <a href="https://www.linkedin.com/in/tatyana-li-1349bb34" target="_blank">
+          <img src="img/linkedin1.png" class="icon" />
+        </a>
+        <a href="https://www.facebook.com/tanya.lee.73345" target="_blank">
+          <img src="img/facebook1.png" class="icon" />
+        </a>
+      </div>
     </section>
-    </section>
-    
+
     <section id="form">
       <h2>Leave a Message</h2>
       <form name="leave_message">
