--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <img
         class="circular--square"
         src="img/tatyana.jpg"
-        alt="Tatyana's image"
+        alt="Tatyana's image" title="Tatyana's image at the Dali Museum"
       />
       <p>
         Highly motivated individual with a strong sence of accountability. Able
@@ -66,7 +66,7 @@
       <h2>Experience</h2>
       <div class="container">
         <div class="grid-item">Specialist - "H&R Block" - 2016</div>
-        <div class="grid-item">Specialist - "Syneos Health" - 2016-2020</div>
+        <div class="grid-item">Team Lead - "Syneos Health" - 2016-2020</div>
         <div class="grid-item">
           System Support Analyst - "Parexel" - 2020-current
         </div>
