Added alt text to icons

--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
       <h2>Connect</h2>
       <div class="social">
         <a href="https://github.com/litatyana1/intro-to-programming" target="_blank">
-          <img src="img/github1.png" class="icon" />
+          <img src="img/github1.png" alt="GitHub icon" class="icon" />
         </a>
         <a href="https://www.linkedin.com/in/tatyana-li-1349bb34" target="_blank">
-          <img src="img/linkedin1.png" class="icon" />
+          <img src="img/linkedin1.png" alt="Linkedin icon" class="icon" />
         </a>
         <a href="https://www.facebook.com/tanya.lee.73345" target="_blank">
-          <img src="img/facebook1.png" class="icon" />
+          <img src="img/facebook1.png" alt="Facebook icon" class="icon" />
         </a>
       </div>
     </section>
