corrected leave message section

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
     </section>
 
-    <section id="form">
+    <section id="leave_message" id="form">
       <h2>Leave a Message</h2>
       <form name="leave_message">
         <label class="field-name" for="user_name">Name</label>
