added dark mode

--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
           <span class="bar"></span>
           <span class="bar"></span>
         </div>
-        <!-- <button onclick="myFunction()">Dark mode</button> -->
       </nav>
     </header>
 
-    <!-- <script>
+    <button onclick="myFunction()">Dark mode</button>
+    <script>
       function myFunction() {
         var element = document.body;
         element.classList.toggle("dark-mode");
       }
-    </script> -->
+    </script>
 
     <section id="about">
       <h2>About</h2>
